Bug 1118589 - MSE: Run appendBuffer internal's asynchronously. r=cajbir, a=sledru